# ai-stocks-news-analysis

./: .gitignore  README.md  start.ps1
backend/: .env.example  README.md  pyproject.toml
backend/app/: deps.py  main.py
backend/app/alerts/: __main__.py  notifier.py  rules.py  runner.py  state.py
backend/app/analysis/: agent.py  analyzer.py  indicators.py  network.py  political.py  relationships.py  scoring.py  trace_store.py
backend/app/api/: routes.py
backend/app/chat/: agent.py  tools.py
backend/app/config/: cache.py  settings_store.py
backend/app/data/: market.py  news.py  sp500.json  truth_social.py  universe.py
backend/app/evaluation/: __main__.py  (+5 more)
backend/tests/: conftest.py  test_agent.py  test_alert_schema.py  test_alert_state.py  test_alerts_cli.py  test_analysis_service.py  test_analysis_snapshot_store.py  test_analyzer.py  test_api.py  test_api_alerts.py  test_api_deep_stream.py  test_api_evaluation.py  test_api_graph.py  test_api_last_analysis.py  test_api_news.py  test_api_provider_test.py  test_api_score.py  test_api_screen.py  test_api_signals.py  test_api_truth.py  test_api_universe.py  test_api_watchlist_run.py  test_cache.py  test_chat_agent.py  test_chat_tools.py  test_evaluation_board.py  test_evaluation_evaluate.py  test_evaluation_explain.py  test_evaluation_migration.py  test_evaluation_record.py  test_evaluation_runner.py  test_evaluation_schema.py  test_evaluation_scoring.py  test_evaluation_signals.py  test_evaluation_store.py  test_graph_imports.py  test_graph_overlay.py  test_health.py  test_import_model.py  test_indicators.py  (+38 more)
(+211 files in other folders)
